--- a/flex.css
+++ b/flex.css
@@ -14,3 +14,5 @@
 .justify-content-center {justify-content: center;}
 .justify-content-around {justify-content: space-around ;}
 .align-items-center {align-items: center;}
+.align-items-right{ align-items: right;}
+.justify-content-right {justify-content: right;}
