--- a/flex.css
+++ b/flex.css
@@ -15,4 +15,5 @@
 .justify-content-around {justify-content: space-around ;}
 .align-items-center {align-items: center;}
 .align-items-right{ align-items: right;}
+.align-items-left{ align-items: left;}
 .justify-content-right {justify-content: right;}
